[package]
name = "user-service"
version = "0.1.0"
edition = "2024"
description = "User service — tenant initialization, authentication logic, and user lifecycle management"
license = "Apache-2.0"
rust-version.workspace = true

[dependencies]
# Internal — core domain, contracts
data = { workspace = true }
kernel = { workspace = true }

# Serialization & validation
serde = { workspace = true }
serde_json = { workspace = true }
validator = { version = "0.20", features = ["derive"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Utilities
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true, features = ["v4"] }

[[test]]
name = "unit_tests"
path = "tests/unit/user_tests.rs"

[features]
default = []

[lints]
workspace = true
