[package]
name = "repo-tools"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
toml.workspace = true
walkdir.workspace = true
xshell.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
