[package]
name = "outbox-relay-worker"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "outbox-relay-worker"
path = "src/main.rs"

[dependencies]
# Internal
runtime = { path = "../../packages/runtime", version = "0.1.0" }
event-bus = { path = "../../packages/messaging", version = "0.1.0" }
contracts_events = { path = "../../packages/contracts/events", version = "0.1.0" }
data = { path = "../../packages/data", version = "0.1.0" }
storage_turso = { path = "../../packages/data-adapters/turso", version = "0.1.0" }
worker-runtime = { workspace = true }
observability = { workspace = true }
platform = { workspace = true }

# Core
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
anyhow = { workspace = true }

# HTTP server for health checks
axum = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
