[package]
name = "projector-worker"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "projector-worker"
path = "src/main.rs"

[dependencies]
# Internal
contracts_events = { path = "../../packages/contracts/events" }
event-bus = { path = "../../packages/messaging" }
runtime = { path = "../../packages/runtime" }
storage_turso = { path = "../../packages/data-adapters/turso" }
data = { path = "../../packages/data" }
observability = { workspace = true }

# Core
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
anyhow = { workspace = true }
async-nats = "0.38"
futures-util = { workspace = true }

# HTTP server for health checks
axum = { workspace = true }

# Configuration
figment = { version = "0.10", features = ["env"] }

[dev-dependencies]

[lints]
workspace = true
