[package]
name = "{{bff-name}}-bff"
version = "0.1.0"
edition = "2024"
description = "BFF layer for {{target}} — aggregation and view model assembly"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
