[package]
name = "service-{{domain}}"
version = "0.1.0"
edition = "2024"
description = "{{domain}} domain service — {{description}}"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
