[package]
license = "Apache-2.0"
name = "native-tauri"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false  # Tauri desktop app only - excluded from backend CI

[build-dependencies]
tauri-build = "2.5.6"

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-playwright = { version = "0.2.2" }
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", tag = "v0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["full"] }

# Logging (unified tracing backbone)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
log = "0.4"

# Environment variables (2026 best practice - dotenvy)
dotenvy = "0.15.7"

# Database
storage_turso = { path = "../../../packages/data-adapters/turso", version = "0.1.0" }
async-trait = "0.1"

# Time and error handling
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# Internal crates
data = { path = "../../../packages/data", version = "0.1.0" }
sdk-counter = { path = "../../../packages/sdk/rust/counter", version = "0.1.0" }
sdk-counter-embedded = { path = "../../../packages/sdk/rust/counter-embedded", version = "0.1.0" }
workspace-hack = { version = "0.1.0", path = "../../../packages/workspace-hack" }

[features]
e2e-testing = []

[dev-dependencies]
tempfile = "3"
