[package]
name = "dependency-validator"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
petgraph = "0.7"
