[package]
name = "platform-validator"
version = "0.1.0"
edition = "2024"
description = "Platform model validator — validates YAML models against JSON schemas"
license = "MIT"
rust-version.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# JSON Schema validation
jsonschema = "0.28"

# File system
glob = "0.3"
walkdir = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "platform-validator"
path = "src/main.rs"
