[package]
name = "observability-validator"
version = "0.1.0"
edition = "2024"
description = "Observability validator — checks telemetry and observability configuration"
license = "MIT"
rust-version.workspace = true

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# File system
glob = "0.3"
walkdir = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "observability-validator"
path = "src/main.rs"
