[package]
name = "security-validator"
version = "0.1.0"
edition = "2024"
description = "Security validator — checks for common security issues in platform models"
license = "MIT"
rust-version.workspace = true

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# File system
glob = "0.3"
walkdir = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1"

[lints]
workspace = true

[[bin]]
name = "security-validator"
path = "src/main.rs"
