[package]
name = "admin-bff"
version = "0.1.0"
edition = "2021"
description = "Admin Backend-for-Frontend — aggregates multiple service views for admin dashboard"

[[bin]]
name = "admin-bff"
path = "src/main.rs"

[dependencies]
# Internal — composition via contracts and features only
contracts_api = { workspace = true }
contracts_errors = { workspace = true }
kernel = { workspace = true }
domain = { workspace = true }
feature-admin = { workspace = true }
feature-counter = { workspace = true }
feature-settings = { workspace = true }
feature-agent = { workspace = true }

# Services — only through their public interfaces
admin-service = { workspace = true }
counter-service = { workspace = true }
tenant-service = { workspace = true }
user-service = { workspace = true }
settings-service = { workspace = true }
agent-service = { workspace = true }
storage_turso = { workspace = true }

# HTTP framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# OpenAPI
utoipa = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client (for external service calls if needed)
reqwest = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Config
figment = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Base64 for JWT decoding
base64 = "0.22"

# Async trait
async-trait = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
